--- a/menu.html
+++ b/menu.html
@@ -52,28 +52,82 @@
         <li>Bun</li>
     </ul>
     <script src="/js/menu.js"></script>
-
+    <section class = "food-section">
+        <h2>Appetizers</h2>
+        <div class = "food-item alt">
+            <div class = "food">
+                <h3>D8. Cha Gio</h3>
+                <p>vietnamese style deep fried spring rolls (chicken)</p>
+            </div>
+            <div>
+                <h2>8.75</h2>
+            </div>
+        </div>
+        <div class = "food-item">
+            <div class = "food">
+                <h3>D9a. Goi Cuon Tom</h3>
+                <p>summer rolls with shrimp</p>
+            </div>
+            <div>
+                <h2>8.75</h2>
+            </div>
+        </div>
+        <div class = "food-item alt">
+            <div class = "food">
+                <h3>D9b. Goi Cuon chay</h3>
+                <p>summer rolls without shrimp</p>
+            </div>
+            <div>
+                <h2>8.75</h2>
+            </div>
+        </div>
+        <div class = "food-item">
+            <div class = "food">
+                <h3>D9c. thit nuong coun</h3>
+                <p>jumbo shrimp in salt and pepper sauce</p>
+            </div>
+            <div>
+                <h2>13.25</h2>
+            </div>
+        </div>
+    </section>
     <section class = "food-section">
         <h2>Seafood | Do Bien</h2>
         <div class = "food-item alt">
-            <h3>D18. Tom Rang Moi</h3>
-            <p>jumbo shrimp in salt and pepper sauce</p>
-            <h2>13.25</h2>
+            <div class = "food">
+                <h3>D18. Tom Rang Moi</h3>
+                <p>jumbo shrimp in salt and pepper sauce</p>
+            </div>
+            <div>
+                <h2>13.25</h2>
+            </div>
         </div>
         <div class = "food-item">
-            <h3>D29. Muc Xao Sa Ot</h3>
-            <p>squid with lemongrass chili sauce</p>
-            <h2>13.25</h2>
+            <div class = "food">
+                <h3>D18. Tom Rang Moi</h3>
+                <p>jumbo shrimp in salt and pepper sauce</p>
+            </div>
+            <div>
+                <h2>13.25</h2>
+            </div>
         </div>
         <div class = "food-item alt">
-            <h3>D32. Tom Xao Bong Cai</h3>
-            <p>jumbo shrimp and broccoli </p>
-            <h2>13.25</h2>
+            <div class = "food">
+                <h3>D18. Tom Rang Moi</h3>
+                <p>jumbo shrimp in salt and pepper sauce</p>
+            </div>
+            <div>
+                <h2>13.25</h2>
+            </div>
         </div>
         <div class = "food-item">
-            <h3>D20. Tom Goi Dudu</h3>
-            <p>shrimp with cold papaya salad</p>
-            <h2>13.25</h2>
+            <div class = "food">
+                <h3>D18. Tom Rang Moi</h3>
+                <p>jumbo shrimp in salt and pepper sauce</p>
+            </div>
+            <div>
+                <h2>13.25</h2>
+            </div>
         </div>
     </section>
 </body>
