--- a/menu.html
+++ b/menu.html
@@ -86,10 +86,37 @@
             <div class = "food-item">
                 <div class = "food">
                     <h3>D9c. thit nuong coun</h3>
-                    <p>jumbo shrimp in salt and pepper sauce</p>
+                    <p>summer rolls with grilled pork</p>
                 </div>
                 <div>
-                    <h2>13.25</h2>
+                    <h2>9.25</h2>
+                </div>
+            </div>
+            <div class = "food-item alt">
+                <div class = "food">
+                    <h3>D12a. Banh Khoai mon chien Tom</h3>
+                    <p>fried shrimp taro cake</p>
+                </div>
+                <div>
+                    <h2>8.95</h2>
+                </div>
+            </div>
+            <div class = "food-item">
+                <div class = "food">
+                    <h3>D14. Bo Nuong Lui</h3>
+                    <p>Barbecued beef with lettuce wrap</p>
+                </div>
+                <div>
+                    <h2>11.95</h2>
+                </div>
+            </div>
+            <div class = "food-item alt">
+                <div class = "food">
+                    <h3>D15. Muc Chien Don</h3>
+                    <p>Crispy squid with garlic sauce</p>
+                </div>
+                <div>
+                    <h2>11.95</h2>
                 </div>
             </div>
         </section>
