added style to the buttons
need to fix its responsiveness

--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Menu</title>
 </head>
-<body id = "top" style="background-color: #1B1F2F;">
+<body style="background-color: #1B1F2F;">
     <nav>
         <div class = 'drop'>
             <div class="logo">
@@ -660,7 +660,7 @@
             </div>
         </section>
     </div>
-    <div class = "drinks-content">
+    <div class = "drinks-content" id = "bev-content">
         <section class = "food-section">
             <h2>Beverages | Giai Khat</h2>
             <div class = "food-item alt">
