added back to the top button

--- a/menu.html
+++ b/menu.html
@@ -37,7 +37,7 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    <a href="#top" class = "top-button">Back to the top</a>
+    <a href="#top" class = "top-button"><img src="nhatrangImg/backtothetop.png" alt = "Back to the top!"></a>
     <!-- <img src="nhatrangImg/nhatrangoneMenupt1.png" alt="nhatrangoneMenupt1">
     <img src="nhatrangImg/nhatrangoneMenupt2.png" alt="nhatrangoneMenupt2"> -->
     <div class = "center">
