added scrollign responsiveness

--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
         <div class = "menu-buttons">
             <a class = "eat" id = "appetizer"><li>Appetizers</li></a>
             <a class = "eat" id = "entree"><li>Entrees</li></a>
-            <a class = "eat" id = "noodle"><li>Noodle</li></a>
+            <a class = "eat" id = "noodle"><li>Noodles</li></a>
             <a class = "eat" id = "rice"><li>Rice</li></a>
             <a class = "bev"><li>Beverages</li></a>
         </div>
