small style changes with location

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p>New York, NY 10013</p>
             <p>(212)-233-5948</p>
             
-            <h2 style="margin-top:50px">OPEN EVERYDAY EXCEPT MONDAY</h2>
+            <h2>OPEN EVERYDAY EXCEPT MONDAY</h2>
             <p>11:00 AM - 8:30 PM</p>
         </div>
         <div id="map"></div>
