Location and Sizing

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500;700&display=swap" rel="stylesheet">  
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
@@ -108,7 +108,7 @@
             <a href="https://www.instagram.com/nhatrangnyc/?hl=en">
                 <div style="display: flex; justify-content: center; align-items: center; gap: 15px;">
                     <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M11.4471 0.875H27.2519C33.2729 0.875 38.1648 5.76699 38.1648 11.7879V27.5928C38.1648 30.487 37.0151 33.2628 34.9685 35.3093C32.922 37.3559 30.1462 38.5057 27.2519 38.5057H11.4471C5.42617 38.5057 0.53418 33.6137 0.53418 27.5928V11.7879C0.53418 8.89361 1.68393 6.11788 3.73049 4.07131C5.77706 2.02475 8.55279 0.875 11.4471 0.875ZM11.0708 4.63807C9.27432 4.63807 7.55144 5.3517 6.28116 6.62198C5.01088 7.89227 4.29725 9.61514 4.29725 11.4116V27.9691C4.29725 31.7133 7.32651 34.7426 11.0708 34.7426H27.6283C29.4247 34.7426 31.1476 34.029 32.4179 32.7587C33.6881 31.4884 34.4018 29.7655 34.4018 27.9691V11.4116C34.4018 7.66733 31.3725 4.63807 27.6283 4.63807H11.0708ZM29.2276 7.46037C29.8513 7.46037 30.4495 7.70816 30.8906 8.14923C31.3317 8.5903 31.5795 9.18851 31.5795 9.81228C31.5795 10.436 31.3317 11.0343 30.8906 11.4753C30.4495 11.9164 29.8513 12.1642 29.2276 12.1642C28.6038 12.1642 28.0056 11.9164 27.5645 11.4753C27.1234 11.0343 26.8756 10.436 26.8756 9.81228C26.8756 9.18851 27.1234 8.5903 27.5645 8.14923C28.0056 7.70816 28.6038 7.46037 29.2276 7.46037ZM19.3495 10.2827C21.8446 10.2827 24.2375 11.2738 26.0017 13.0381C27.766 14.8024 28.7572 17.1953 28.7572 19.6903C28.7572 22.1854 27.766 24.5783 26.0017 26.3426C24.2375 28.1068 21.8446 29.098 19.3495 29.098C16.8544 29.098 14.4616 28.1068 12.6973 26.3426C10.933 24.5783 9.94184 22.1854 9.94184 19.6903C9.94184 17.1953 10.933 14.8024 12.6973 13.0381C14.4616 11.2738 16.8544 10.2827 19.3495 10.2827ZM19.3495 14.0457C17.8525 14.0457 16.4167 14.6404 15.3582 15.699C14.2996 16.7576 13.7049 18.1933 13.7049 19.6903C13.7049 21.1874 14.2996 22.6231 15.3582 23.6817C16.4167 24.7402 17.8525 25.3349 19.3495 25.3349C20.8466 25.3349 22.2823 24.7402 23.3408 23.6817C24.3994 22.6231 24.9941 21.1874 24.9941 19.6903C24.9941 18.1933 24.3994 16.7576 23.3408 15.699C22.2823 14.6404 20.8466 14.0457 19.3495 14.0457Z" fill="#182353"/></svg>                    
-                    <p>@nhatrangnyc</p>
+                    <p>nhatrangnyc</p>
                 </div>
             </a>
         </div>
@@ -129,23 +129,39 @@
     <section class="Location" id = "Location"> 
         <div class="description">
             <h1>HOURS & LOCATION</h1>
-            <br>hello</br>
-            <p>87 Baxter Street</p>
-            <p>New York, NY 10013</p>
-            <p>(212)-233-5948</p>
+
+            <svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 98.8203 13.0117)" fill="#C13434"/>
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 197.18 13.0117)" fill="#C13434"/>
+            </svg>
+
+            <p>
+            87 Baxter Street <br> 
+            New York, NY 10013 <br>
+            (212)-233-5948
+            </p>
             
             <h2>OPEN EVERYDAY EXCEPT MONDAY</h2>
-            <p>11:00 AM - 8:30 PM</p>
+            <h3>11:00 AM - 8:30 PM</h3>
+        </div> 
+        <button class="directions">GET DIRECTIONS</button>
+        <div id="map">
+            <a href="https://www.google.com/maps?saddr=My+Location&daddr=Nha+Trang+One,+87+Baxter+St,+New+York,+NY+10013"></a>
         </div>
-        <div id="map"></div>
-        <a href="https://www.google.com/maps?saddr=My+Location&daddr=Nha+Trang+One,+87+Baxter+St,+New+York,+NY+10013"><button class="directions">GET DIRECTIONS</button></a>
+        <br><svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
+            <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 98.8203 13.0117)" fill="#C13434"/>
+            <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 197.18 13.0117)" fill="#C13434"/>
+            </svg>
+        </br>
         <script>
             // Adding my map from mapbox with access token and map style
-            mapboxgl.accessToken = '["Insert API Key Here"]'; 
+            mapboxgl.accessToken = '[Insert Here]'; 
             const map = new mapboxgl.Map({
               container: 'map',
               style: 'mapbox://styles/andrewdai6123/clg2xlsap002f01mqrt7vrgqt', 
-              center: [-73.99965, 40.71675],
+              center: [-74, 40.71675],
               zoom: 13.5
             });
         </script>
