--- a/ourstory.html
+++ b/ourstory.html
@@ -37,7 +37,7 @@
         <script src = "/js/navbar.js"></script>
     </nav>
     <section class="Landing_Page">
-        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/nha-trang-inside.jfif') center/cover no-repeat;">
+        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;"">
             <h1>Our Story</h1>
         </div>
     </section>
