--- a/menu.html
+++ b/menu.html
@@ -37,10 +37,15 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    <a href="#top" class = "top-button"><img src="nhatrangImg/backtothetop.png" alt = "Back to the top!"></a>
+    <section class="Landing_Page">
+        <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;"">
+            <h1>Menu</h1>
+        </div>
+    </section>
+    <a class = "top-button"><img src="nhatrangImg/backtothetop.png" alt = "Back to the top!"></a>
     <!-- <img src="nhatrangImg/nhatrangoneMenupt1.png" alt="nhatrangoneMenupt1">
     <img src="nhatrangImg/nhatrangoneMenupt2.png" alt="nhatrangoneMenupt2"> -->
-    <div class = "center">
+    <div class = "menu-nav">
         <div class = "menu-buttons">
             <a class = "eat" id = "appetizer"><li>Appetizers</li></a>
             <a class = "eat" id = "entree"><li>Entrees</li></a>
@@ -50,8 +55,8 @@
         </div>
     </div>
     <div class = "food-content">
+        <h1>Appetizers</h1>
         <section class = "food-section" id = "appetizer-section">
-            <h2>Appetizers</h2>
             <div class = "food-item alt">
                 <div class = "food">
                     <h3>D8. Cha Gio</h3>
@@ -116,6 +121,7 @@
                 </div>
             </div>
         </section>
+        <h1>Entrees</h1>
         <section class = "food-section" id = "entree-section">
             <h2>Seafood | Do Bien</h2>
             <div class = "food-item alt">
@@ -353,6 +359,7 @@
                 </div>
             </div>
         </section>
+        <h1>Noodles</h1>
         <section class = "food-section" id = "noodle-section">
             <h2>Rice Noodle | Pho</h2>
             <div class = "food-item alt">
@@ -539,8 +546,8 @@
                 </div>
             </div>
         </section>
+        <h1>Rice</h1>
         <section class = "food-section" id = "rice-section">
-            <h2>Rice | Com</h2>
             <div class = "food-item alt">
                 <div class = "food">
                     <h3>L11. com suon nuong</h3>
@@ -661,8 +668,9 @@
         </section>
     </div>
     <div class = "drinks-content" id = "bev-content">
+        <h1>Beverages</h1>
         <section class = "food-section">
-            <h2>Beverages | Giai Khat</h2>
+            <h2>Non-Alcoholic</h2>
             <div class = "food-item alt">
                 <div class = "food">
                     <h3>1. Caphe Phin Sua Nong</h3>
