bunch of changes
-font referencing simplified
-change back to top icon
-changes to the width and height of divs to lower size of sections in general

--- a/menu.html
+++ b/menu.html
@@ -7,11 +7,9 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada One">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Slab">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&family=Squada+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Menu</title>
 </head>
@@ -37,12 +35,18 @@
         </ul>
         <script src = "/js/navbar.js"></script>
     </nav>
-    <section class="Landing_Page">
+    <section class="Menu_Landing_Page">
         <div class="Landing_Page_Content"style = "background: linear-gradient(0deg, rgba(0, 0, 0, 0.59), rgba(0, 0, 0, 0.59)), url('nhatrangImg/about.png') center/cover no-repeat;"">
             <h1>Menu</h1>
         </div>
     </section>
-    <a class = "top-button"><img src="nhatrangImg/backtothetop.png" alt = "Back to the top!"></a>
+    <a class = "top-button">
+        <svg width="75" height="75" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <circle cx="25" cy="25" r="25" fill="#EEF3FC"/>
+            <path d="M13.7713 26.4023C14.1026 26.7335 14.552 26.9196 15.0205 26.9196C15.489 26.9196 15.9384 26.7335 16.2698 26.4023L25.0163 17.6557L33.7629 26.4023C34.0961 26.7242 34.5425 26.9023 35.0058 26.8982C35.4691 26.8942 35.9122 26.7084 36.2398 26.3808C36.5675 26.0531 36.7533 25.61 36.7573 25.1467C36.7613 24.6834 36.5832 24.237 36.2614 23.9038L26.2656 13.908C25.9342 13.5767 25.4849 13.3906 25.0163 13.3906C24.5478 13.3906 24.0984 13.5767 23.7671 13.908L13.7713 23.9038C13.44 24.2351 13.2539 24.6845 13.2539 25.153C13.2539 25.6216 13.44 26.0709 13.7713 26.4023Z" fill="#1B1F2F"/>
+            <path d="M13.7713 36.0942C14.1026 36.4254 14.552 36.6115 15.0205 36.6115C15.489 36.6115 15.9384 36.4254 16.2698 36.0942L25.0163 27.3476L33.7629 36.0942C34.0961 36.416 34.5425 36.5941 35.0058 36.5901C35.4691 36.5861 35.9122 36.4003 36.2398 36.0727C36.5675 35.745 36.7533 35.3019 36.7573 34.8386C36.7613 34.3753 36.5832 33.9289 36.2614 33.5957L26.2656 23.5999C25.9342 23.2686 25.4849 23.0825 25.0163 23.0825C24.5478 23.0825 24.0984 23.2686 23.7671 23.5999L13.7713 33.5957C13.44 33.927 13.2539 34.3764 13.2539 34.8449C13.2539 35.3135 13.44 35.7628 13.7713 36.0942Z" fill="#1B1F2F"/>
+        </svg>            
+    </a>
     <!-- <img src="nhatrangImg/nhatrangoneMenupt1.png" alt="nhatrangoneMenupt1">
     <img src="nhatrangImg/nhatrangoneMenupt2.png" alt="nhatrangoneMenupt2"> -->
     <div class = "menu-nav">
@@ -568,7 +572,7 @@
             </div>
             <div class = "food-item alt">
                 <div class = "food">
-                    <h3>L13. Cốm Xào Tôm</h3>
+                    <h3>L13. cơm Xào Tôm</h3>
                     <p>Shrimp and vegetables over rice</p>
                 </div>
                 <div>
