--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:wght@300;400;700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&family=Rubik:wght@300;400;500;600;700;800;900&family=Squada+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Squada One">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto Slab">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
     <link rel="stylesheet" href="styles.css">
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.9.2/mapbox-gl.css' rel='stylesheet' />
@@ -54,6 +49,11 @@
     <section class="Popular_Dishes">
         <div class="Popular_Dishes_Content">
             <h1>POPULAR DISHES & DRINKS</h1>
+            <svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 98.8203 13.0117)" fill="#C13434"/>
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 197.18 13.0117)" fill="#C13434"/>
+            </svg>
             <div class="dishes">
                 <div class="dish">
                     <div class="description">
@@ -99,6 +99,12 @@
                 </div>
             </div>
             <a style="margin-top: 40px;" href="menu.html"><button>EXPLORE THE MENU</button></a>
+
+            <svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 98.8203 13.0117)" fill="#C13434"/>
+                <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 197.18 13.0117)" fill="#C13434"/>
+            </svg>
         </div>
     </section>
 
@@ -143,6 +149,12 @@
             <h2>OPEN EVERYDAY EXCEPT MONDAY</h2>
             <h3>11:00 AM - 8:30 PM</h3>
             <button class="directions">GET DIRECTIONS</button>
+            
+        </div>
+        <div>
+            <div id="map">
+                <a href="https://www.google.com/maps?saddr=My+Location&daddr=Nha+Trang+One,+87+Baxter+St,+New+York,+NY+10013"></a>
+            </div>
             <br><svg width="255" height="25" viewBox="0 0 255 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 0.460938 13.0122)" fill="#C13434"/>
                 <rect width="32.5" height="32.5" rx="2" transform="matrix(0.919212 -0.393763 0.919212 0.393763 98.8203 13.0117)" fill="#C13434"/>
@@ -150,15 +162,10 @@
                 </svg>
             </br>
         </div>
-        <div>
-            <div id="map">
-                <a href="https://www.google.com/maps?saddr=My+Location&daddr=Nha+Trang+One,+87+Baxter+St,+New+York,+NY+10013"></a>
-            </div>
-        </div>
         
         <script>
             // Adding my map from mapbox with access token and map style
-            mapboxgl.accessToken = 'here'; 
+            mapboxgl.accessToken = 'Insert Here'; 
             const map = new mapboxgl.Map({
               container: 'map',
               style: 'mapbox://styles/andrewdai6123/clg2xlsap002f01mqrt7vrgqt', 
